Add travis integration (#229)
* Fix spotbugs

* Fix forbidden

* Update travis command

* Add custom install command to travis

* Update README to simplify the build

* Fix travis

* Fix travis on jdk9

* Update travis

* Update travis

* Fix travis

* Fix travis on JDK9+

* Change target to 1.8 to see if the travis CI passes